--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8082
 ##server.session-timeout= # session timeout in seconds
 
 #Ureka Client 
-eureka.client.service-url.defaultZone=http://localhost:8768/eureka
+eureka.client.service-url.defaultZone=http://eurekaserver.amazing.com/eureka
 info.build.artifact=helloworld
 info.build.name=helloworld
 #Rate limiter
