sync the policy and shopping cart

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ server.port=8082
 ##server.session-timeout= # session timeout in seconds
 
 #Ureka Client 
-eureka.client.service-url.defaultZone=http://eurekaserver.amazing.com:8080/eureka
-info.build.artifact=helloworld
-info.build.name=helloworld
+eureka.client.service-url.defaultZone=http://eurekaserver.amazing.com/eureka
+#Service URL
+shoppingcart.url = http://ShoppingCartELB-1938350415.ap-southeast-1.elb.amazonaws.com
+
 #Rate limiter
 ratelimiter.consumeCount = 10
