--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,11 @@
 	     	<artifactId>xmemcached-provider</artifactId>
 	     	<version>3.6.0</version>
 	    </dependency>
-	<dependency>
+	    <dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient</artifactId>
+		</dependency>
+		<dependency>
         	<groupId>org.springframework.cloud</groupId>
         	<artifactId>spring-cloud-starter-config</artifactId>
     	</dependency>
