--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,7 @@ server.port=8082
 ##server.session-timeout= # session timeout in seconds
 
 #Ureka Client 
-eureka.client.service-url.defaultZone=http://eurekaserver.amazing.com/eureka
-#Service URL
-shoppingcart.url = http://ShoppingCartELB-1938350415.ap-southeast-1.elb.amazonaws.com
+eureka.client.service-url.defaultZone=http://ec2-52-74-16-27.ap-southeast-1.compute.amazonaws.com/eureka
 
 #Rate limiter
 ratelimiter.consumeCount = 10
